# Chill

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Chill_Installer/: Chill_Installer.vdproj
Chill_Installer/Release/: Chill_Installer.msi
chill/: CMakeLists.txt
chill/ChillEngine/: CMakeLists.txt  FileDialog.cpp  FileDialog.h  FileManager.cpp  FileManager.h  GraphSaver.cpp  GraphSaver.h  GroupProcessors.cpp  IOTypes.h  IOs.cpp  IOs.h  Input.h  LuaProcessor.cpp  LuaProcessor.h  NodeEditor.cpp  NodeEditor.h  ProcessingGraph.cpp  ProcessingGraph.h  Processor.cpp  Processor.h  Resources.h  Style.h  UI.h  VisualComment.cpp  VisualComment.h  WindowTools.h
chill/ChillLauncher/: CMakeLists.txt  launcher.cpp
cmake/Modules/: UseCXX17.cmake
desc/: graph.lua
doc/: Doxyfile
doc/doc/html/: _file_dialog_8h_source.html  _graph_saver_8h_source.html  _graph_u_i_8h_source.html  _i_o_types_8h_source.html  _i_os_8h.html  _i_os_8h_source.html  _listener_8h_source.html  _node_editor_8h_source.html  _node_u_i_8h_source.html  _processing_graph_8h.html  _processing_graph_8h_source.html  _processor_8h.html  _processor_8h_source.html  _style_8h_source.html  _u_i_8h_source.html  _window_u_i_8h_source.html  annotated.html  class_chill_1_1_bool_input-members.html  class_chill_1_1_bool_input.html  class_chill_1_1_bool_output-members.html  class_chill_1_1_bool_output.html  class_chill_1_1_graph_saver-members.html  class_chill_1_1_graph_saver.html  class_chill_1_1_graph_u_i-members.html  class_chill_1_1_graph_u_i.html  class_chill_1_1_group_processor-members.html  class_chill_1_1_group_processor.html  class_chill_1_1_i_o-members.html  class_chill_1_1_i_o.html  class_chill_1_1_int_input-members.html  class_chill_1_1_int_input.html  class_chill_1_1_int_output-members.html  class_chill_1_1_int_output.html  class_chill_1_1_lua___graph-members.html  class_chill_1_1_lua___graph.html  class_chill_1_1_lua___input-members.html  class_chill_1_1_lua___input.html  class_chill_1_1_lua___node-members.html  class_chill_1_1_lua___node.html  class_chill_1_1_lua___output-members.html  (+64 more)
doc/doc/html/search/: all_0.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  typedefs_0.js  variables_0.js
doc/doc/latex/: _i_os_8h.tex  _processing_graph_8h.tex  _processor_8h.tex  annotated.tex  class_chill_1_1_bool_input.eps  class_chill_1_1_bool_input.tex  class_chill_1_1_bool_output.eps  class_chill_1_1_bool_output.tex  class_chill_1_1_graph_saver.tex  class_chill_1_1_graph_u_i.eps  class_chill_1_1_graph_u_i.tex  class_chill_1_1_group_processor.eps  class_chill_1_1_group_processor.tex  class_chill_1_1_i_o.eps  class_chill_1_1_i_o.tex  class_chill_1_1_int_input.eps  class_chill_1_1_int_input.tex  class_chill_1_1_int_output.eps  class_chill_1_1_int_output.tex  class_chill_1_1_lua___graph.eps  class_chill_1_1_lua___graph.tex  class_chill_1_1_lua___input.tex  class_chill_1_1_lua___node.eps  class_chill_1_1_lua___node.tex  class_chill_1_1_lua___output.tex  class_chill_1_1_lua___processor.eps  class_chill_1_1_lua___processor.tex  class_chill_1_1_lua_processor.eps  class_chill_1_1_lua_processor.tex  class_chill_1_1_multiplexer.eps  class_chill_1_1_multiplexer.tex  class_chill_1_1_node_editor.eps  class_chill_1_1_node_editor.tex  class_chill_1_1_processing_graph.eps  class_chill_1_1_processing_graph.tex  class_chill_1_1_processor.eps  class_chill_1_1_processor.tex  class_chill_1_1_processor_input.eps  class_chill_1_1_processor_input.tex  class_chill_1_1_processor_output.eps  (+35 more)
docs/: readme.md  readme.txt
libs/: CMakeLists.txt
libs/lua/: CMakeLists.txt
libs/luabind-deboostified/luabind/: class.hpp
libs/luabind-deboostified/luabind/detail/: instance_holder.hpp
ressources/: init.graph  main.rc
ressources/nodes/: emit.lua  test.lua
ressources/nodes/Converters/: EquationToShape.lua  ScalarsToVec3.lua
ressources/nodes/Implicits/Deformations/: elongation.lua  extrusion.lua  revolution.lua  rounding.lua
ressources/nodes/Implicits/Primitives/: iBox.lua  iCone.lua  iCylinder.lua  iHexagonal_prism.lua  iOctahedron.lua  iSphere.lua  iTorus.lua
ressources/nodes/Implicits/Transformations/: Difference.lua  Intersection.lua  Union.lua
ressources/nodes/Inputs/: color.lua  integer.lua  object.lua
ressources/nodes/Inputs/Shapes/: sphere.lua
ressources/nodes/Maths/: add.lua  divide.lua  multiply.lua  sqrt.lua  substract.lua
ressources/nodes/Transformations/: mirror.lua  rotate.lua  scale.lua  translation.lua
ressources/nodes/Transformations/CSG/: difference.lua  intersection.lua  union.lua
ressources/nodes/Tweaks/: scalar.lua
ressources/nodes/inputs/primitives/: cube.lua
tests/: CMakeLists.txt  graphTest.cpp  stdafx.cpp
